# kvseo

./: .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/kvseo/: __init__.py  __main__.py
src/kvseo/cli/: __init__.py  advisor.py  audit.py  config.py  connect.py  init.py  report.py
src/kvseo/config/: __init__.py  paths.py  secrets.py  settings.py
src/kvseo/connectors/: __init__.py  base.py  csv.py  gsc.py  gsc_auth.py  psi.py
src/kvseo/core/: __init__.py
src/kvseo/core/advisor/: __init__.py  client.py  context.py  prompts.py  schemas.py
src/kvseo/core/audit/: __init__.py  document.py  engine.py  fetcher.py  scoring.py
src/kvseo/core/audit/checks/: __init__.py  _base.py  content.py  cwv.py  headings.py  meta.py  title.py
src/kvseo/core/report/: __init__.py  renderer.py
src/kvseo/core/report/templates/: report.html.j2  report.md.j2
src/kvseo/storage/: __init__.py  db.py  models.py  types.py
src/kvseo/storage/migrations/: env.py  script.py.mako
src/kvseo/storage/migrations/versions/: 0001_initial_schema.py
tests/: conftest.py  test_cli.py  test_config_paths.py  test_init.py  test_secrets.py
tests/advisor/: test_client.py  test_context.py  test_schemas.py
tests/audit/: test_engine.py  test_fetcher.py
tests/checks/: test_checks.py
tests/connectors/: test_base.py  test_connect.py  test_csv.py  test_gsc.py  test_gsc_auth.py  test_psi.py
tests/fixtures/csv/: queries_bom_nopage.csv  queries_happy.csv  queries_mostly_bad.csv  queries_outofrange.csv  queries_partial.csv  queries_renamed.csv
tests/fixtures/html/: good.html  poor.html
tests/fixtures/psi/: example_mobile.json
tests/report/: test_renderer.py
tests/storage/: test_migrations.py  test_models.py
tests/unit/: test_scoring.py
